docs: :memo: Add user swagger
